[package]
name = "dungeons"
version = "0.1.0"
authors = ["profan <robinhubner@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
utility = { path = "../utility" }
random_choice = "0.3.2"
macroquad = "0.3.24"
petgraph = "0.6.2"
hecs = "0.9.0"