[package]
name = "multi-rymd"
version = "0.1.0"
edition = "2021"

[dependencies]
macroquad = "0.4.6"
macroquad-particles = "0.2.1"

lockstep = { path = "../lockstep" }
lockstep-client = { path = "../lockstep/client" }
utility = { path = "../utility" }

deterministic-hash = "1.0.1"
nanoserde = "0.1.35"

profiling = { version = "1.0.15", features = ["profile-with-puffin"] }
egui-miniquad = { path = "egui-miniquad" }
egui-macroquad = { path = "egui-macroquad" }
puffin_egui = "0.29.0"

hecs = { version = "0.10.4", features = ["macros"] }
yakui-macroquad = "0.3.0"
yakui = "0.2.0"

[profile.dev]
opt-level = 0
incremental = true

[profile.dev.build-override]
opt-level = 3

[profile.dev.package."*"]
opt-level = 2