[package]
name = "multi-rymd"
version = "0.1.0"
edition = "2021"

[dependencies]
macroquad = "0.4.6"
macroquad-particles = "0.2.1"

lockstep = { path = "../lockstep" }
lockstep-client = { path = "../lockstep/client" }
utility = { path = "../utility" }

deterministic-hash = "1.0.1"
nanoserde = "0.1.35"

profiling = { version = "1.0.15", features = ["profile-with-puffin"] }
egui-miniquad = { path = "../third-party/egui-miniquad" }
egui-macroquad = { path = "../third-party/egui-macroquad" }
puffin_egui = "0.29.0"

quad-rand = { version = "0.2.3" }
hecs = { version = "0.10.4", features = ["macros"] }
fnv = "1.0.7"

# FYSIKS
rapier2d = { version = "*", features = [ "enhanced-determinism" ] }

[profile.dev]
opt-level = 0
incremental = true

[profile.dev.build-override]
opt-level = 3

[profile.dev.package."*"]
opt-level = 2