[package]
name = "hoxx-client"
version = "0.1.0"
edition = "2021"

[dependencies]
macroquad = "0.4.5"
nanoserde = "0.1.35"
hoxx-shared = { path = "../shared" }
utility = { path = "../../utility" }
ewebsock = { version = "0.6.0", features = ["tls"] }
# ewebsock = { git = "https://github.com/rerun-io/ewebsock.git", features = ["tls"] }
hexx = "0.17"

[profile.dev]
incremental = true
opt-level = 2