[package]
name = "lockstep-client"
version = "0.1.0"
edition = "2021"

[dependencies]
nanoserde = "0.1.35"
lockstep = { path = "../" }
deterministic-hash = "1.0.1"
utility = { path = "../../utility" }
ewebsock = "0.4.0"

# macroquad related dependencies
yakui-macroquad = "0.3.0"
macroquad = "0.4.6"
yakui = "0.2.0"

[profile.dev]
incremental = true
opt-level = 2